# equinox

./: .gitignore  AGENTS.md  CMakeLists.txt  GUIDE.md  INSTALL.md  LICENSE  README.md  VERSION  fix-eqx.sh  meson.build
bindings/: Equinox.i  GenerateBindingsCLI.schema.json  GenerateBindingsCLI.yaml  XFeats.schema.json  XFeats.yaml  generate-bindings.sh
cmake/: HandleCommons.cmake  HandleEQVSG.cmake  HandleKlib.cmake  equinox.pc.in
docs/: CMakeLists.txt  Doxyfile.in  Manual.i  layout.xml
evprofiles/: x86-64.evp  x86-64.sxa
fuzz/: CMakeLists.txt  fuzz_egraph_add.c  fuzz_egraph_combined.c  fuzz_egraph_union.c  fuzz_hashcons.c  fuzz_rewrite.c  fuzz_unionfind.c
include/: equinox.h
include/common/: compiler.h  dump.h  eqvsg.h  erl.h  memory.h
include/equinox/: eclass.h  egraph.h  enode.h  equinox.h  hashcons.h  libutil-includes.h  libutils.h  rewrite.h  unionfind.h
include/redvisage/: extract.h  lower.h  node.h  opcodes.h  rewrite.h
scripts/: install-dependencies.sh
src/: eclass.c  egraph.c  enode.c  hashcons.c  rewrite.c  unionfind.c
src/common/compiler/: compiler.c
src/common/dump/: dump.c
src/common/eqvsg/: eqvsg.c  main.c
src/common/erl/: erl.c
src/common/memory/: memory.c
src/equinox/: egraph.c  unionfind.c
src/redvisage/: extract.c  lower.c  node.c  rewrite.c
tests/: CMakeLists.txt  test_egraph.c  test_egraph_extensive.c  test_enode.c  test_eqvsg.c  test_hashcons.c  test_hashcons_extensive.c  test_redvisage.c  test_rewrite.h  test_rewrite_extensive.c  test_unionfind.c  test_unionfind_extensive.c
